# practice

./: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  26.cpp  27.cpp  28.cpp  29.cpp  3.cpp  30.cpp  31.cpp  32.cpp  33.cpp  34.cpp  35.cpp  36.cpp  37.cpp  38.cpp  39.cpp  40.cpp  41.cpp  42.cpp  43.cpp  44.cpp  45.cpp  46.cpp  (+87 more)
header/: clock.h  constants.h  foo.h  goo.h  io.h  square.h
